---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var i1 : int1\nvar i : int\nvar _res : boolean\n_res := i < i1\n"
---
"i1"@"src/main.t:4..6" [ConstVar(Var, No)]: int1
"i"@"src/main.t:18..19" [ConstVar(Var, No)]: int
"_res"@"src/main.t:30..34" [ConstVar(Var, No)]: boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
